--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,9 +1,9 @@
 <h1><%= "Our Cocktails (" + @cocktails.length.to_s + ")" %></h1>
+<p><%= link_to "Add a cocktail", new_cocktail_path, class: "add" %></p>
 <div class="cocktails">
 <% @cocktails.each do |cocktail| %>
     <div class="card">
-	  <p><%= cocktail.name %></p>      
-	  <%= link_to "More Info", cocktail_path(cocktail), class: "more-info" %>
+	  <p><%= cocktail.name + " " %><%= link_to "More Info", cocktail_path(cocktail), class: "more-info" %></p>      
       <br>
 	</div>
 	<% end %>
