--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,1 +1,11 @@
-new.html.erb
+<div class="cocktail">
+	<h1>Your new cocktail</h1>
+	<%= form_for(@cocktail) do |f| %>
+	  <%= f.label :name%>
+	  <br>
+	  <%= f.text_field :name%>
+	  <br>
+	  <br>
+	  <%= f.submit %>
+	<% end %>
+</div>
