Mister Cocktail App, style to be added

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,6 @@
   <h3>Ingredients</h3>
   <p><%= link_to "Add an ingredient", new_cocktail_dose_path(@cocktail.id), class: "add" %></p>  
 	 <% @cocktail.ingredients.each do |ingredient| %>
-	 	<p><%= ingredient.name + ":" %><%= ingredient.doses.first.description %></p>
+	 	<p><%= ingredient.name + ":" %><%= ingredient.doses.first.description + " "%><%= link_to "Remove", cocktail_dose_path(@cocktail.id, ingredient.doses.first[:id]), method: "delete", class: "remove", data: { confirm: "Are you sure?" } %></p> 
 	 <% end %>
-	 </%>
 </div>
