--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.remove:hover {
+	text-decoration: none;
+}
+
+
+.add:hover {
+	text-decoration: none;
+}
