--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,32 @@
 // Specific CSS for your home-page
+
+body {
+  background: #59C173;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #5D26C1, #a17fe0, #59C173);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+h1 {
+	font-family: 'Lobster', cursive;
+	text-shadow: 5px 5px 8px #ff00b0;
+	color: white;
+	text-align: center;
+	font-size: 80px;
+}
+
+h2 {
+	font-family: 'Lobster', cursive;
+	text-shadow: 5px 5px 8px #ff00b0;
+	color: white;
+	text-align: center;
+	font-size: 50px;
+}
+
+h3 {
+	font-family: 'Lobster', cursive;
+	text-shadow: 5px 5px 8px #ff00b0;
+	color: white;
+	text-align: center;
+	font-size: 30px;
+}
+
