--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,15 @@
-<div class="cocktail">
+
   <h2><%= @cocktail.name %></h2>
   <h3>Ingredients</h3>
-  <p><%= link_to "Add an ingredient", new_cocktail_dose_path(@cocktail.id), class: "add" %></p>  
+  <div class="cocktail">
+	 <div class="List">
+	 <br>
 	 <% @cocktail.ingredients.each do |ingredient| %>
-	 	<p><%= ingredient.name + ":" %><%= ingredient.doses.first.description + " "%><%= link_to "Remove", cocktail_dose_path(@cocktail.id, ingredient.doses.first[:id]), method: "delete", class: "remove", data: { confirm: "Are you sure?" } %></p> 
+	 	<p><%= ingredient.name + " : " %><%= ingredient.doses.first.description + " "%><%= link_to "(Remove)", cocktail_dose_path(@cocktail.id, ingredient.doses.first[:id]), method: "delete", class: "remove", data: { confirm: "Are you sure?" } %></p> 
 	 <% end %>
+	 <p><%= link_to "Add an ingredient", new_cocktail_dose_path(@cocktail.id), class: "add" %></p>  
+	 </div>
+  <%= image_tag(@cocktail.picture, class: "pic") %>
 </div>
 
 
