--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -2,11 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.remove:hover {
+
+a {
 	text-decoration: none;
 }
 
-
-.add:hover {
-	text-decoration: none;
-}
