--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -9,7 +9,8 @@
 	 <% end %>
 	 <p><%= link_to "Add an ingredient", new_cocktail_dose_path(@cocktail.id), class: "add" %></p>  
 	 </div>
-  <%= image_tag(@cocktail.picture, class: "pic") %>
+  <%= image_tag(@cocktail.picture, class: "pic") if @cocktail.picture%>
+  <%= cl_image_tag @cocktail.upload, class: "pic" if @cocktail.upload%>
 </div>
 
 
